#$Id: Makefile.am,v 1.1.1.1 2003/05/07 02:13:23 lfan Exp $
#
# Copyright 1998 - 2002 Double Precision, Inc.  See COPYING for
# distribution information.

AUTOMAKE = srcdir=${srcdir} @SHELL@ ${srcdir}/../automake.fix @AUTOMAKE@

noinst_LIBRARIES=librandom128.a

librandom128_a_SOURCES=random128.c random128.h random128alpha.c \
	random128binary.c
