#Makefile.am,v 1.5 2000/12/02 22:08:37 mrsam Exp
#
# Copyright 2000-2001 Double Precision, Inc.  See COPYING for
# distribution information.

CLEANFILES=filelist

IMAGES = address.gif \
	attachsign.gif \
        cpass.gif \
        draft.gif \
        folderclosed.gif \
        folderopen.gif \
        help.gif \
        inbox.gif \
        lastnode.gif \
        login.gif \
        logo1.gif \
        logo.gif \
        logout.gif \
        maillist.gif \
        menu_bg.gif \
        menu_end.gif \
        menu_fend.gif \
        menu_sep.gif \
        mnode.gif \
        new.gif \
        node.gif \
        pnode.gif \
        pro.gif \
        rep.gif \
        replied.gif \
        sent.gif \
        sep.gif \
        sig.gif \
        trash.gif \
        unread.gif \
        vertline.gif \
        write.gif \
        sendok1.gif \
        sendok2.gif \
        sendok3.gif \
        sendok4.gif \
        sendok5.gif \
	sqwebmail.css


noinst_DATA=$(IMAGES) filelist
EXTRA_DIST=$(IMAGES)

filelist: Makefile
	echo $(IMAGES) >filelist
