dnl Process this file with autoconf to produce a configure script.
dnl configure.in,v 1.1 2000/05/24 17:08:11 mrsam Exp

dnl Copyright 2000 Double Precision, Inc.  See COPYING for
dnl distribution information.

AC_INIT(address.gif)

AM_INIT_AUTOMAKE(sqwebmail-images,0.10)
dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
